--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
+:root {
+
+}
 body {
     font-family: "Roboto", sans-serif;
+    background-color: #ffffff;
+    color: #434455;
 }
 /**/
 .list {
@@ -18,6 +23,9 @@ body {
 }
 
 /* header */
+.top-line {
+
+}
 .logo {
   font-family: "Raleway";
   font-style: normal;
@@ -57,7 +65,7 @@ body {
 }
 /* hero */
 .hero {
-
+  background-color: #2e2f42;
 }
 .hero-text {
 
@@ -67,7 +75,7 @@ body {
 }
 /* footer */
 .footer {
-
+  background-color: #2e2f42; 
 }
 .footer-logo {
   font-family: 'Raleway';
@@ -80,7 +88,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
-  /* color: #F4F4FD; */
+  color: #F4F4FD;
 }
 .footer-text {
 font-style: normal;
@@ -88,5 +96,6 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-/* color: #E7E9FC; */
+color: #E7E9FC;
 }
+/* Portfolio */
