--- a/css/styles.css
+++ b/css/styles.css
@@ -1,101 +1,331 @@
 :root {
+  --decoration-color: #ffffff; /* DECORATION-COLOR */
+  --darc-color: #2e2f42; /* NAVY BLUE */
+  --primary-brand-color: #4d5ae5; /* IRIS */
+  --light-color: #f4f4fd; /* CLOUD */
+  --accent-color: #e7e9fc; /* CORNFLOWER */
+  --body-text-color: #434455; /* SLATE */
+}
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
 }
+
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: #ffffff;
-    color: #434455;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  /* background: gray; */
 }
-/**/
+
+.web-header,
+.footer-web {
+  color: var(--primary-brand-color);
+}
+
 .list {
+  padding: 0;
   list-style: none;
 }
-.link:hover,
-.link:focus {
-  font-family: inherit;
-  color: #4d5ae5;
-}
 
-.btn:hover,
-.btn:focus {
-  background: #4d5ae5;
+.btm {
+  text-decoration: none;
   cursor: pointer;
 }
-
-/* header */
-.top-line {
-
+.link {
+  font-family: inherit;
+  text-decoration: none;
 }
-.logo {
+
+h1,
+h2,
+h3,
+p,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header nav,
+.header-nav,
+.contacts-list,
+.portfolio-filter {
+  display: flex;
+  align-items: center;
+}
+
+.header .container,
+.benefits ul,
+.work ul,
+.team ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.work,
+.team-list,
+.portfolio-content {
+  padding-bottom: 120px;
+}
+
+/* ----- HEADER ----- */
+
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header-logo {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
-  color: #2e2f42;
+  margin-right: 77px;
+}
 
+.studio-header {
+  color: var(--darc-color);
 }
-.web {
-  color: #4d5ae5;
-}
-.header-list {
 
+.contacts-link:focus,
+.contacts-link:hover,
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--primary-brand-color);
 }
-.header-link {
-  font-style: normal;
+
+.nav-link {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-decoration: none;
-  color: #2e2f42;
+  color: var(--darc-color);
+  padding: 0 40px 0 0;
 }
-.contact {
-
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 400;
+.contacts-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--body-text-color);
+  padding: 0 40px 0 0;
 }
-/* hero */
+
+/* ----- HERO ----- */
+
 .hero {
-  background-color: #2e2f42;
+  background-color: var(--darc-color);
+  padding-top: 192px;
+  padding-bottom: 192px;
 }
-.hero-text {
 
+.hero-title {
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--decoration-color);
+  width: 492px;
+  margin: 0 auto 48px;
 }
-.hero-button {
 
+.hero-btm {
+  display: block;
+  margin: 0 auto;
+  padding: 16px 32px;
+
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.19;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: var(--decoration-color);
+  background-color: var(--primary-brand-color);
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
-/* footer */
+
+/* ----- BENEFITS ----- */
+
+.benefits {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.benefits-list {
+  max-width: 264px;
+}
+.benefits-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--darc-color);
+}
+.benefits-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+}
+
+/* ----- WORK ----- */
+
+.work-title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--darc-color);
+  padding-bottom: 72px;
+}
+
+/* ----- TEAM ----- */
+
+.team {
+  background-color: var(--light-color);
+}
+
+.team-item {
+  background: var(--decoration-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--darc-color);
+  padding-top: 120px;
+  padding-bottom: 72px;
+}
+.subject {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--darc-color);
+  padding-top: 32px;
+  padding-bottom: 8px;  
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+  margin-bottom: 32px;
+}
+
+/* ----- PORTFOLIO ----- */
+
+.portfolio-filter {
+  justify-content: center;
+  column-gap: 24px;
+}
+
+.btm-portfolio:focus,
+.btm-portfolio:hover {
+  background-color: var(--primary-brand-color);
+  color: var(--decoration-color);
+  border: 1px solid var(--primary-brand-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.btm-portfolio {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand-color);
+  background: var(--light-color);
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  margin-top: 96px;
+  margin-bottom: 72px;
+}
+
+.portfolio-content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--darc-color);
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+}
+
+.item-content {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.portfolio-content li {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+/* ----- FOOTER ----- */
+
 .footer {
-  background-color: #2e2f42; 
+  padding: 100px 0;
+  background-color: var(--darc-color);
 }
+
 .footer-logo {
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.2;
-  display: flex;
-  align-items: center;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
-  color: #F4F4FD;
 }
+
+.footer-studio {
+  color: var(--light-color);
+}
+
 .footer-text {
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #E7E9FC;
+  max-width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  margin-top: 16px;
 }
-/* Portfolio */
