--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ ul {
   background: var(--light-color);
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  padding: 8px 16px;
   margin-top: 96px;
   margin-bottom: 72px;
 }
