--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,12 @@ ul {
   padding-bottom: 120px;
 }
 
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* ----- HEADER ----- */
 
 .header {
@@ -137,7 +143,7 @@ ul {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
-  letter-spacing: 0.02em;
+  /* letter-spacing: 0.02em; */
   color: var(--decoration-color);
   width: 492px;
   margin: 0 auto 48px;
@@ -147,7 +153,6 @@ ul {
   display: block;
   margin: 0 auto;
   padding: 16px 32px;
-
   font-weight: 600;
   font-size: 16px;
   line-height: 1.19;
@@ -193,19 +198,22 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--darc-color);
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 /* ----- TEAM ----- */
 
 .team {
   background-color: var(--light-color);
+  padding-top: 120px;
+  padding-bottom: 120px
 }
 
 .team-item {
   background: var(--decoration-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  padding-bottom: 32px;
 }
 
 .team-title {
@@ -216,8 +224,7 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--darc-color);
-  padding-top: 120px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .subject {
   font-weight: 600;
@@ -226,16 +233,15 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--darc-color);
-  padding-top: 32px;
-  padding-bottom: 8px;  
+  margin-top: 32px;
+  margin-bottom: 8px;  
 }
 .team-text {
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--body-text-color);
-  margin-bottom: 32px;
+  color: var(--body-text-color);  
 }
 
 /* ----- PORTFOLIO ----- */
@@ -243,6 +249,8 @@ ul {
 .portfolio-filter {
   justify-content: center;
   column-gap: 24px;
+  padding-top: 96px;
+  padding-bottom: 72px;
 }
 
 .btm-portfolio:focus,
@@ -266,8 +274,8 @@ ul {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   padding: 8px 16px;
-  margin-top: 96px;
-  margin-bottom: 72px;
+  /* margin-top: 96px;
+  margin-bottom: 72px; */
 }
 
 .portfolio-content {
@@ -278,30 +286,33 @@ ul {
   row-gap: 48px;
 }
 
+.portfolio-content li {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.item-content {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  border: 0.5px solid var(--light-color);
+  border-top: none;  
+}
 .portfolio-title {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--darc-color);
-}
+  padding-left: 16px;
+  margin-bottom: 8px;
+  }
 
 .portfolio-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--body-text-color);
+  padding-left: 16px;
 }
 
-.item-content {
-  margin: 32px auto 32px 16px;
-  /* margin-top: 32px;
-  margin-bottom: 32px; */
-}
-
-.portfolio-content li {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
 /* ----- FOOTER ----- */
 
 .footer {
