--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,6 @@ ul {
   justify-content: space-between;
 }
 
-.work,
-.team-list,
-.portfolio-content {
-  padding-bottom: 120px;
-}
 
 .img {
   display: block;
@@ -190,6 +185,11 @@ ul {
 
 /* ----- WORK ----- */
 
+.work {
+  padding-bottom: 120px;
+}
+
+
 .work-title {
   font-weight: 600;
   font-size: 36px;
@@ -246,11 +246,16 @@ ul {
 
 /* ----- PORTFOLIO ----- */
 
+.portfolio {
+  padding-top: 96px;
+  padding-bottom: 120px;
+  }
+
 .portfolio-filter {
   justify-content: center;
   column-gap: 24px;
-  padding-top: 96px;
-  padding-bottom: 72px;
+  /* padding-top: 96px; */
+  margin-bottom: 72px;
 }
 
 .btm-portfolio:focus,
@@ -290,8 +295,8 @@ ul {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .item-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  /* padding-top: 32px;
+  padding-bottom: 32px; */
   border: 0.5px solid var(--light-color);
   border-top: none;  
 }
@@ -301,8 +306,9 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--darc-color);
+  padding-top: 32px;
   padding-left: 16px;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
   }
 
 .portfolio-text {
@@ -310,7 +316,9 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--body-text-color);
+  padding-top: 8px;
   padding-left: 16px;
+  padding-bottom: 32px;
 }
 
 /* ----- FOOTER ----- */
